second try image fix

--- a/icon-collection.html
+++ b/icon-collection.html
@@ -170,22 +170,22 @@
 
             <div>
                 <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="w-75" src="images/icons/protfolioTinypng/Honey-bae.jpg" height="auto">
+                    <img src="images/icons/protfolioTinypng/Honey-bae.jpg">
                 </div>
             </div>
             <div>
                 <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="w-75" src="images/icons/protfolioTinypng/TrustFund-logo.jpg" height="auto">
+                    <img src="images/icons/protfolioTinypng/TrustFund-logo.jpg">
                 </div>
             </div>
             <div>
                 <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="w-75" src="images/icons/protfolioTinypng/Juice-factory.jpg" height="auto">
+                    <img src="images/icons/protfolioTinypng/Juice-factory.jpg">
                 </div>
             </div>
             <div>
                 <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="w-75" src="images/icons/protfolioTinypng/Phoenix.jpg" height="auto">
+                    <img src="images/icons/protfolioTinypng/Phoenix.jpg">
                 </div>
             </div>
         </div>
