--- a/illustrations.html
+++ b/illustrations.html
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                    <div class="container d-flex justify-content-center">
+                    <div class=" d-flex justify-content-center">
                         <img src="images/icons/protfolioTinypng/norma.png">
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                    <div class="container d-flex justify-content-center">
+                    <div class="d-flex justify-content-center">
                         <img src="images/icons/protfolioTinypng/digital-art.jpg">
                     </div>
                 </div>
@@ -224,7 +224,7 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="container d-flex justify-content-center">
+                <div class="d-flex justify-content-center">
                     <img src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
@@ -236,7 +236,7 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="container d-flex justify-content-center">
+                <div class=" d-flex justify-content-center">
                     <img src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
@@ -248,7 +248,7 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="container d-flex justify-content-center">
+                <div class="d-flex justify-content-center">
                     <img src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
@@ -260,7 +260,7 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2000">
-                <div class="container d-flex justify-content-center">
+                <div class="d-flex justify-content-center">
                     <img src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
