--- a/web-design.html
+++ b/web-design.html
@@ -168,8 +168,8 @@
                 <div class="container d-flex justify-content-center pt-2 pb-3 mt-5">
                     <h4>Portfolio</h4>
                 </div>
-                <div class="container d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="w-75" src="images/icons/protfolioTinypng/website-frame.png" height="auto">
+                <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
+                    <img src="images/icons/protfolioTinypng/website-frame.png">
                 </div>
             </div>
 
@@ -177,8 +177,8 @@
                 <div class="container d-flex justify-content-center pt-2 pb-3 mt-5">
                     <h4>Chat application</h4>
                 </div>
-                <div class="container d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="w-75" src="images/icons/protfolioTinypng/HelloApp.png" height="auto">
+                <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
+                    <img src="images/icons/protfolioTinypng/HelloApp.png">
                 </div>
             </div>
 
