--- a/illustrations.html
+++ b/illustrations.html
@@ -48,9 +48,9 @@
         } */
         
         img {
-            width: 60vw;
-            height: auto;
             border-radius: 30px;
+            /* width: 60vw;
+            height: auto; */
         }
         
         @media(max-width: 768px) {
@@ -63,8 +63,8 @@
             }
             img {
                 width: 70vw;
-                height: auto;
-                border-radius: 10px !important;
+                /* height: auto;
+                border-radius: 10px !important; */
             }
             .project {
                 margin-top: 0 !important;
@@ -192,28 +192,25 @@
 
             </div>
 
-            <div>
-                <div class="project container content-text p-4">
-                    <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1500" id="illu">
-                        <h4>Starr Carter</h4>
-                    </div>
-                </div>
-                <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                    <div class=" d-flex justify-content-center">
-                        <img src="images/icons/protfolioTinypng/norma.png">
-                    </div>
+            <div class="project container content-text p-4">
+                <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1500" id="illu">
+                    <h4>Starr Carter</h4>
                 </div>
             </div>
-            <div>
-                <div class="project container content-text p-4">
-                    <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1500" id="illu">
-                        <h4>Illuminous</h4>
-                    </div>
+            <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
+                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/norma.png">
+
                 </div>
-                <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                    <div class="d-flex justify-content-center">
-                        <img src="images/icons/protfolioTinypng/digital-art.jpg">
-                    </div>
+            </div>
+            <div class="project container content-text p-4">
+                <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1500" id="illu">
+                    <h4>Illuminous</h4>
+                </div>
+            </div>
+            <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
+                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/digital-art.jpg">
                 </div>
             </div>
 
@@ -224,8 +221,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/toothless.jpg">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
+                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -236,8 +233,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class=" d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/self-portrait.jpg">
+                <div class=" d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
+                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -248,8 +245,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
+                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -260,8 +257,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2000">
-                <div class="d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/vector-art.png">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
+                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
 
