--- a/icon-collection.html
+++ b/icon-collection.html
@@ -26,8 +26,6 @@
         }
         
         img {
-            width: 60vw;
-            height: auto;
             border-radius: 30px;
         }
         
@@ -40,8 +38,6 @@
                 letter-spacing: 0px;
             }
             img {
-                width: 70vw;
-                height: auto;
                 border-radius: 10px !important;
             }
             .project {
@@ -169,23 +165,23 @@
             </div>
 
             <div>
-                <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img src="images/icons/protfolioTinypng/Honey-bae.jpg">
+                <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/Honey-bae.jpg">
                 </div>
             </div>
             <div>
-                <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img src="images/icons/protfolioTinypng/TrustFund-logo.jpg">
+                <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/TrustFund-logo.jpg">
                 </div>
             </div>
             <div>
-                <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img src="images/icons/protfolioTinypng/Juice-factory.jpg">
+                <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/Juice-factory.jpg">
                 </div>
             </div>
             <div>
-                <div class="pt-2 pb-2 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img src="images/icons/protfolioTinypng/Phoenix.jpg">
+                <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/Phoenix.jpg">
                 </div>
             </div>
         </div>
