--- a/illustrations.html
+++ b/illustrations.html
@@ -49,8 +49,6 @@
         
         img {
             border-radius: 30px;
-            /* width: 60vw;
-            height: auto; */
         }
         
         @media(max-width: 768px) {
@@ -62,9 +60,7 @@
                 letter-spacing: 0px;
             }
             img {
-                width: 70vw;
-                /* height: auto;
-                border-radius: 10px !important; */
+                border-radius: 10px !important;
             }
             .project {
                 margin-top: 0 !important;
@@ -198,8 +194,8 @@
                 </div>
             </div>
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
-                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/norma.png">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/norma.png">
 
                 </div>
             </div>
@@ -209,8 +205,8 @@
                 </div>
             </div>
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
-                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/digital-art.jpg">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/digital-art.jpg">
                 </div>
             </div>
 
@@ -221,8 +217,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
-                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/toothless.jpg">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -233,8 +229,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class=" d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
-                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/self-portrait.jpg">
+                <div class=" d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -245,8 +241,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
-                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -257,8 +253,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2000">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-3 mr-3">
-                    <img class="w-75 h-auto" src="images/icons/protfolioTinypng/vector-art.png">
+                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
 
