--- a/web-design.html
+++ b/web-design.html
@@ -26,8 +26,6 @@
         }
         
         img {
-            width: 60vw;
-            height: auto;
             border-radius: 30px;
         }
         
@@ -40,8 +38,6 @@
                 letter-spacing: 0px;
             }
             img {
-                width: 70vw;
-                height: auto;
                 border-radius: 10px !important;
             }
             .project {
@@ -164,21 +160,21 @@
                 </div>
 
             </div>
-            <div class="pr-4 pl-4">
+            <div class="pl-4 pr-4 ml-5 mr-5">
                 <div class="container d-flex justify-content-center pt-2 pb-3 mt-5">
                     <h4>Portfolio</h4>
                 </div>
                 <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img src="images/icons/protfolioTinypng/website-frame.png">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/website-frame.png">
                 </div>
             </div>
 
-            <div class="pr-4 pl-4">
+            <div class="pl-4 pr-4 ml-5 mr-5 ">
                 <div class="container d-flex justify-content-center pt-2 pb-3 mt-5">
                     <h4>Chat application</h4>
                 </div>
                 <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img src="images/icons/protfolioTinypng/HelloApp.png">
+                    <img class="img-fluid" src="images/icons/protfolioTinypng/HelloApp.png">
                 </div>
             </div>
 
