fix illustration images

--- a/illustrations.html
+++ b/illustrations.html
@@ -194,9 +194,8 @@
                 </div>
             </div>
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/norma.png">
-
+                <div class="container d-flex justify-content-center">
+                    <img src="images/icons/protfolioTinypng/norma.png" width="100%" height="auto">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -205,8 +204,8 @@
                 </div>
             </div>
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/digital-art.jpg">
+                <div class="container d-flex justify-content-center">
+                    <img src="images/icons/protfolioTinypng/digital-art.jpg" width="100%" height="auto">
                 </div>
             </div>
 
@@ -217,8 +216,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/toothless.jpg">
+                <div class="container d-flex justify-content-center">
+                    <img src="images/icons/protfolioTinypng/toothless.jpg" width="100%" height="auto">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -229,8 +228,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class=" d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/self-portrait.jpg">
+                <div class="container d-flex justify-content-center">
+                    <img src="images/icons/protfolioTinypng/self-portrait.jpg" width="100%" height="auto">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -241,8 +240,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
+                <div class="container d-flex justify-content-center">
+                    <img src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg" width="100%" height="auto">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -253,8 +252,8 @@
             </div>
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2000">
-                <div class="d-flex justify-content-center pl-4 pr-4 ml-5 mr-5">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/vector-art.png">
+                <div class="container d-flex justify-content-center">
+                    <img src="images/icons/protfolioTinypng/vector-art.png" width="100%" height="auto">
                 </div>
             </div>
 
