fix image resolution

--- a/illustrations.html
+++ b/illustrations.html
@@ -195,7 +195,10 @@
             </div>
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/norma.png" width="100%" height="auto">
+                    <img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    " src="images/icons/protfolioTinypng/norma.png">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -205,7 +208,10 @@
             </div>
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/digital-art.jpg" width="100%" height="auto">
+                    <img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    " src="images/icons/protfolioTinypng/digital-art.jpg">
                 </div>
             </div>
 
@@ -217,7 +223,10 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/toothless.jpg" width="100%" height="auto">
+                    <img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    " src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -229,7 +238,10 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/self-portrait.jpg" width="100%" height="auto">
+                    <img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    " src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -241,7 +253,10 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2500">
                 <div class="container d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg" width="100%" height="auto">
+                    <img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    " src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
             <div class="project container content-text p-4">
@@ -253,7 +268,10 @@
 
             <div class="p-3" data-aos="fade-up" data-aos-duration="2000">
                 <div class="container d-flex justify-content-center">
-                    <img src="images/icons/protfolioTinypng/vector-art.png" width="100%" height="auto">
+                    <img style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    " src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
 
