add width to img

--- a/illustrations.html
+++ b/illustrations.html
@@ -198,6 +198,7 @@
                     <img style="display: block;
                     margin-left: auto;
                     margin-right: auto;
+                    width: 100%;
                     " src="images/icons/protfolioTinypng/norma.png">
                 </div>
             </div>
@@ -211,6 +212,7 @@
                     <img style="display: block;
                     margin-left: auto;
                     margin-right: auto;
+                    width: 100%;
                     " src="images/icons/protfolioTinypng/digital-art.jpg">
                 </div>
             </div>
@@ -226,6 +228,7 @@
                     <img style="display: block;
                     margin-left: auto;
                     margin-right: auto;
+                    width: 100%;
                     " src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
@@ -241,6 +244,7 @@
                     <img style="display: block;
                     margin-left: auto;
                     margin-right: auto;
+                    width: 100%;
                     " src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
@@ -256,6 +260,7 @@
                     <img style="display: block;
                     margin-left: auto;
                     margin-right: auto;
+                    width: 100%;
                     " src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
@@ -271,6 +276,7 @@
                     <img style="display: block;
                     margin-left: auto;
                     margin-right: auto;
+                    width: 100%;
                     " src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
