Fix image style

--- a/illustrations.html
+++ b/illustrations.html
@@ -197,8 +197,8 @@
                 <div class="container d-flex justify-content-center">
                     <img style="display: block;
                     margin-left: auto;
-                    margin-right: auto;
                     width: 100%;
+                    height: 100%;
                     " src="images/icons/protfolioTinypng/norma.png">
                 </div>
             </div>
@@ -211,8 +211,8 @@
                 <div class="container d-flex justify-content-center">
                     <img style="display: block;
                     margin-left: auto;
-                    margin-right: auto;
                     width: 100%;
+                    height: 100%;
                     " src="images/icons/protfolioTinypng/digital-art.jpg">
                 </div>
             </div>
@@ -227,8 +227,8 @@
                 <div class="container d-flex justify-content-center">
                     <img style="display: block;
                     margin-left: auto;
-                    margin-right: auto;
                     width: 100%;
+                    height: 100%;
                     " src="images/icons/protfolioTinypng/toothless.jpg">
                 </div>
             </div>
@@ -243,8 +243,8 @@
                 <div class="container d-flex justify-content-center">
                     <img style="display: block;
                     margin-left: auto;
-                    margin-right: auto;
                     width: 100%;
+                    height: 100%;
                     " src="images/icons/protfolioTinypng/self-portrait.jpg">
                 </div>
             </div>
@@ -259,8 +259,8 @@
                 <div class="container d-flex justify-content-center">
                     <img style="display: block;
                     margin-left: auto;
-                    margin-right: auto;
                     width: 100%;
+                    height: 100%;
                     " src="images/icons/protfolioTinypng/Kyle-brushes-art-2.jpg">
                 </div>
             </div>
@@ -275,8 +275,8 @@
                 <div class="container d-flex justify-content-center">
                     <img style="display: block;
                     margin-left: auto;
-                    margin-right: auto;
                     width: 100%;
+                    height: 100%;
                     " src="images/icons/protfolioTinypng/vector-art.png">
                 </div>
             </div>
