--- a/web-design.html
+++ b/web-design.html
@@ -27,6 +27,10 @@
         
         img {
             border-radius: 30px;
+            display: block;
+            margin-left: auto;
+            width: 100%;
+            height: 100%;
         }
         
         @media(max-width: 768px) {
@@ -165,7 +169,7 @@
                     <h4>Portfolio</h4>
                 </div>
                 <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/website-frame.png">
+                    <img src="images/icons/protfolioTinypng/website-frame.png">
                 </div>
             </div>
 
@@ -174,7 +178,7 @@
                     <h4>Chat application</h4>
                 </div>
                 <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/HelloApp.png">
+                    <img src="images/icons/protfolioTinypng/HelloApp.png">
                 </div>
             </div>
 
