--- a/icon-collection.html
+++ b/icon-collection.html
@@ -27,6 +27,10 @@
         
         img {
             border-radius: 30px;
+            display: block;
+            margin-left: auto;
+            width: 100%;
+            height: 100%;
         }
         
         @media(max-width: 768px) {
@@ -166,22 +170,22 @@
 
             <div>
                 <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/Honey-bae.jpg">
+                    <img src="images/icons/protfolioTinypng/Honey-bae.jpg">
                 </div>
             </div>
             <div>
                 <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/TrustFund-logo.jpg">
+                    <img src="images/icons/protfolioTinypng/TrustFund-logo.jpg">
                 </div>
             </div>
             <div>
                 <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/Juice-factory.jpg">
+                    <img src="images/icons/protfolioTinypng/Juice-factory.jpg">
                 </div>
             </div>
             <div>
                 <div class="pt-2 pb-2 pl-4 pr-4 ml-5 mr-5 d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
-                    <img class="img-fluid" src="images/icons/protfolioTinypng/Phoenix.jpg">
+                    <img src="images/icons/protfolioTinypng/Phoenix.jpg">
                 </div>
             </div>
         </div>
