--- a/web-design.html
+++ b/web-design.html
@@ -164,14 +164,14 @@
                 </div>
 
             </div>
-            <div class="pl-4 pr-4 ml-5 mr-5">
+            <!-- <div class="pl-4 pr-4 ml-5 mr-5">
                 <div class="container d-flex justify-content-center pt-2 pb-3 mt-5">
                     <h4>Portfolio</h4>
                 </div>
                 <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-duration="2000">
                     <img src="images/icons/protfolioTinypng/website-frame.png">
                 </div>
-            </div>
+            </div> -->
 
             <div class="pl-4 pr-4 ml-5 mr-5 ">
                 <div class="container d-flex justify-content-center pt-2 pb-3 mt-5">
